--- a/app/src/main/res/layout/activity_item_details.xml
+++ b/app/src/main/res/layout/activity_item_details.xml
@@ -4,6 +4,7 @@
     android:id="@+id/activity_item__details"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
     tools:context="com.example.huichuanyi.ui_third.Item_DetailsActivity">
 
     <RelativeLayout
