--- a/app/src/main/res/layout/activity_login2.xml
+++ b/app/src/main/res/layout/activity_login2.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,114 +8,118 @@
 
     <RelativeLayout
         android:id="@+id/tl_bound_mTool"
-        android:background="@color/top_color"
         android:layout_width="match_parent"
-        android:layout_height="40dp">
+        android:layout_height="40dp"
+        android:background="@color/top_color">
+
         <ImageView
             android:id="@+id/iv_login2_back"
-            android:src="@drawable/back"
-            android:layout_height="match_parent"
             android:layout_width="40dp"
-            />
+            android:layout_height="match_parent"
+            android:src="@drawable/back" />
+
         <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
             android:text="登录"
             android:textColor="#fff"
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            android:layout_centerInParent="true"
-            android:textSize="@dimen/text_size_big"
-            />
+            android:textSize="@dimen/text_size_big" />
     </RelativeLayout>
+
     <LinearLayout
-        android:orientation="vertical"
-        android:layout_centerInParent="true"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
         android:layout_marginLeft="@dimen/distance"
         android:layout_marginRight="@dimen/distance"
-        >
+        android:orientation="vertical">
+
         <EditText
             android:id="@+id/et_login_writephone"
-            android:background="@drawable/background"
             android:layout_width="match_parent"
             android:layout_height="40dp"
+            android:background="@drawable/background"
+            android:gravity="center"
             android:hint="输入手机号"
             android:phoneNumber="true"
-            android:textSize="14sp"
-            android:gravity="center"
-            />
+            android:textSize="14sp" />
+
         <EditText
             android:id="@+id/et_login_pwd"
-            android:background="@drawable/background"
             android:layout_width="match_parent"
             android:layout_height="40dp"
-            android:hint="输入密码"
-            android:textSize="14sp"
-            android:gravity="center"
             android:layout_marginTop="@dimen/distance"
-            />
+            android:background="@drawable/background"
+            android:gravity="center"
+            android:hint="输入密码"
+            android:textSize="14sp" />
+
         <Button
             android:id="@+id/btn_login_login"
-            android:text="登 录"
-            android:layout_marginTop="@dimen/distance"
-            android:textColor="@color/text_color"
-            android:background="@drawable/background"
             android:layout_width="match_parent"
-            android:layout_height="40dp"/>
+            android:layout_height="40dp"
+            android:layout_marginTop="@dimen/distance"
+            android:background="@drawable/background"
+            android:text="登 录"
+            android:textColor="@color/text_color" />
+
         <TextView
             android:id="@+id/tv_login_forgetpwd"
-            android:layout_gravity="center"
-            android:text="忘记密码"
-            android:layout_marginTop="@dimen/distance"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="@dimen/distance"
+            android:text="忘记密码" />
+
         <LinearLayout
-            android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            >
+            android:orientation="horizontal">
+
             <TextView
-                android:layout_weight="3"
-                android:background="#c1bfbf"
                 android:layout_width="0dp"
                 android:layout_height="1dp"
                 android:layout_gravity="center_vertical"
-                />
+                android:layout_weight="3"
+                android:background="#c1bfbf" />
+
             <TextView
-                android:gravity="center"
-                android:text="第三方登录"
-                android:layout_weight="2"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                />
+                android:layout_weight="2"
+                android:gravity="center"
+                android:text="第三方登录" />
+
             <TextView
-                android:layout_weight="3"
-                android:background="#c1bfbf"
                 android:layout_width="0dp"
                 android:layout_height="1dp"
                 android:layout_gravity="center_vertical"
-                />
+                android:layout_weight="3"
+                android:background="#c1bfbf" />
         </LinearLayout>
+
         <LinearLayout
-            android:layout_marginTop="@dimen/distance"
-            android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/distance"
             android:gravity="center"
-            >
+            android:orientation="horizontal">
+
             <ImageView
                 android:id="@+id/tv_login2_wechat"
-                android:src="@mipmap/wechat"
-                android:layout_marginRight="@dimen/distance"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:layout_marginRight="@dimen/distance"
+                android:src="@mipmap/wechat" />
+
             <ImageView
                 android:id="@+id/tv_login2_qq"
-                android:src="@mipmap/qq"
-                android:layout_marginLeft="@dimen/distance"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/distance"
+                android:src="@mipmap/qq" />
         </LinearLayout>
     </LinearLayout>
 
