--- a/app/src/main/res/layout/activity_write_address.xml
+++ b/app/src/main/res/layout/activity_write_address.xml
@@ -4,6 +4,7 @@
     android:id="@+id/activity_write__address2"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
     android:orientation="vertical"
     tools:context="com.example.huichuanyi.ui_third.Write_AddressActivity">
 
@@ -102,31 +103,60 @@
 
     </LinearLayout>
 
-    <LinearLayout
+    <RelativeLayout
         android:id="@+id/ll_write_address"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:orientation="horizontal"
+        android:layout_alignParentStart="true"
         android:visibility="gone">
 
-        <widget.WheelView
-            android:id="@+id/id_province"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"></widget.WheelView>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
 
-        <widget.WheelView
-            android:id="@+id/id_city"
-            android:layout_width="0dp"
+        <TextView
+            android:id="@+id/tv_write_address_cancel"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"></widget.WheelView>
+            android:padding="@dimen/distance_5"
+            android:text="取消" />
 
-        <widget.WheelView
-            android:id="@+id/id_district"
-            android:layout_width="0dp"
+        <TextView
+            android:id="@+id/tv_write_address_sure"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"></widget.WheelView>
-    </LinearLayout>
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentTop="true"
+            android:padding="@dimen/distance_5"
+            android:text="确定" />
+
+        <LinearLayout
+            android:id="@+id/ll_show"
+            android:layout_width="match_parent"
+            android:layout_height="130dp"
+            android:layout_below="@+id/tv_write_address_cancel"
+            android:orientation="horizontal">
+
+            <widget.WheelView
+                android:id="@+id/id_province"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"></widget.WheelView>
+
+            <widget.WheelView
+                android:id="@+id/id_city"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"></widget.WheelView>
+
+            <widget.WheelView
+                android:id="@+id/id_district"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"></widget.WheelView>
+        </LinearLayout>
+
+    </RelativeLayout>
 
 </RelativeLayout>
