--- a/app/src/main/res/layout/fragment_reuser_order.xml
+++ b/app/src/main/res/layout/fragment_reuser_order.xml
@@ -1,22 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent">
-                <android.support.v4.widget.SwipeRefreshLayout
-                    android:id="@+id/sf_reuse_refresh"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-                    <ListView
-                        android:id="@+id/lv_reuse_order"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:divider="#00000000"
-                        android:dividerHeight="@dimen/distance"
-                        android:layout_marginLeft="@dimen/distance"
-                        android:layout_marginRight="@dimen/distance"
-                        >
-                    </ListView>
-                </android.support.v4.widget.SwipeRefreshLayout>
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/sf_reuse_refresh"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <ListView
+            android:id="@+id/lv_reuse_order"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="@dimen/distance"
+            android:layout_marginRight="@dimen/distance"
+            android:divider="#00000000"
+            android:dividerHeight="@dimen/distance"></ListView>
+    </android.support.v4.widget.SwipeRefreshLayout>
 
 </LinearLayout>
