--- a/app/src/main/res/layout/order_person.xml
+++ b/app/src/main/res/layout/order_person.xml
@@ -1,73 +1,87 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content">
-        <RelativeLayout
-            android:background="@drawable/background"
+    xmlns:fresco="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_margin="@dimen/distance_5"
+    android:background="@drawable/background"
+    android:orientation="horizontal">
+
+    <com.facebook.drawee.view.SimpleDraweeView
+        android:id="@+id/sv_csmc_photo"
+        android:layout_width="45dp"
+        android:layout_height="45dp"
+        android:layout_marginLeft="@dimen/distance_5"
+        android:layout_marginTop="@dimen/distance_5"
+        fresco:failureImage="@mipmap/stand"
+        fresco:placeholderImage="@mipmap/stand"
+        fresco:roundedCornerRadius="4dp" />
+
+
+    <RelativeLayout
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/distance_5"
+        android:layout_weight="3">
+
+        <TextView
+            android:id="@+id/tv_person_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:lines="1"
+            android:maxLength="8"
+            android:text="加载中..."
+            android:textColor="#333333"
+            android:textSize="@dimen/text_size_16" />
+
+        <TextView
+            android:id="@+id/tv_person_order"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/distance"
+            android:layout_toRightOf="@+id/tv_person_name"
+            android:text="(已约满)"
+            android:textColor="@color/text_color"
+            android:textSize="@dimen/text_size_13"
+            android:visibility="gone" />
+
+        <TextView
+            android:id="@+id/tv_person_introduction"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-                <com.example.huichuanyi.custom.RoundImageView
-                    android:layout_margin="@dimen/distance"
-                    android:id="@+id/iv_person_photo"
-                    android:src="@mipmap/stand"
-                    android:scaleType="fitXY"
-                    android:layout_width="45dp"
-                    android:layout_height="46dp"
-                    />
-                <TextView
-                    android:layout_marginTop="@dimen/distance"
-                    android:textColor="#333333"
-                    android:layout_marginLeft="@dimen/distance"
-                    android:layout_toRightOf="@+id/iv_person_photo"
-                    android:id="@+id/tv_person_name"
-                    android:text="加载中..."
-                    android:textSize="@dimen/text_size_middle"
-                    android:layout_width="130dp"
-                    android:layout_height="wrap_content"/>
-                <TextView
-                    android:id="@+id/tv_person_order"
-                    android:layout_toRightOf="@+id/tv_person_name"
-                    android:layout_marginTop="@dimen/distance"
-                    android:textColor="@color/text_color"
-                    android:text="(已约满)"
-                    android:visibility="gone"
-                    android:textSize="@dimen/text_size_13"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-                <TextView
-                    android:layout_marginTop="@dimen/distance"
-                    android:textColor="#666666"
-                    android:layout_marginLeft="@dimen/distance"
-                    android:id="@+id/tv_person_introduction"
-                    android:lines="2"
-                    android:layout_toRightOf="@+id/iv_person_photo"
-                    android:layout_below="@+id/tv_person_name"
-                    android:layout_width="200dp"
-                    android:layout_height="wrap_content"/>
-
-                <RelativeLayout
-                    android:layout_margin="@dimen/distance"
-                    android:layout_alignParentEnd="true"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent">
-                        <TextView
-                            android:layout_centerHorizontal="true"
-                            android:id="@+id/tv_person_city"
-                            android:text="加载中..."
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"/>
-                        <ImageView
-                            android:id="@+id/iv_person_news"
-                            android:layout_marginTop="@dimen/distance"
-                            android:src="@mipmap/qualifications"
-                            android:layout_below="@+id/tv_person_city"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"/>
-                </RelativeLayout>
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/tv_person_name"
+            android:layout_marginTop="@dimen/distance_5"
+            android:lines="2"
+            android:textColor="#666666" />
 
 
-        </RelativeLayout>
+    </RelativeLayout>
 
+    <RelativeLayout
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_marginRight="@dimen/distance_5"
+        android:layout_marginTop="@dimen/distance_5"
+        android:layout_weight="1">
+
+        <TextView
+            android:id="@+id/tv_person_city"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:text="加载中..." />
+
+        <TextView
+            android:id="@+id/tv_person_news"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/tv_person_city"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="@dimen/distance_5"
+            android:background="@drawable/background2"
+            android:padding="@dimen/distance_5"
+            android:text="资格认证"
+            android:textColor="@color/text_color" />
+    </RelativeLayout>
 
 </LinearLayout>
