--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="@dimen/distance_10"
     android:orientation="vertical">
 
     <android.support.v4.widget.SwipeRefreshLayout
@@ -12,7 +13,9 @@
         <ListView
             android:id="@+id/fragment_list_view"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:divider="#00000000"
+            android:dividerHeight="10dp">
 
         </ListView>
     </android.support.v4.widget.SwipeRefreshLayout>
