--- a/app/src/main/res/layout/item_clothes_info.xml
+++ b/app/src/main/res/layout/item_clothes_info.xml
@@ -11,7 +11,8 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="4"
-        fresco:actualImageScaleType="centerCrop"
+        fresco:actualImageScaleType="fitCenter"
+        fresco:placeholderImageScaleType="fitXY"
         fresco:placeholderImage="@mipmap/nonepic"
         fresco:roundBottomLeft="false"
         fresco:roundBottomRight="false"
