--- a/app/src/main/res/layout/item_fragment_refresh_record.xml
+++ b/app/src/main/res/layout/item_fragment_refresh_record.xml
@@ -1,26 +1,75 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:fresco="http://schemas.android.com/apk/res-auto"
-    android:padding="@dimen/distance"
-    android:orientation="horizontal"
-    android:background="@drawable/background"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="horizontal"
+    android:padding="@dimen/distance">
+
+    <LinearLayout
+        android:id="@+id/line"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:visibility="gone">
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="1dp"
+            android:layout_gravity="center"
+            android:layout_weight="1"
+            android:background="@color/back_ground" />
+
+        <TextView
+            android:id="@+id/tv_item_refresh_record_year"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_marginLeft="@dimen/distance_10"
+            android:layout_marginRight="@dimen/distance_10"
+            android:text="年" />
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="1dp"
+            android:layout_gravity="center"
+            android:layout_weight="1"
+            android:background="@color/back_ground" />
+    </LinearLayout>
+
+
+    <TextView
+        android:id="@+id/tv_item_refresh_record_month"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/line"
+        android:layout_marginTop="@dimen/distance_5"
+        android:text="月" />
+
     <TextView
         android:id="@+id/tv_item_refresh_record_date"
-        android:text="日期"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/line"
+        android:layout_marginLeft="@dimen/distance_5"
+        android:layout_marginTop="@dimen/distance_10"
+        android:layout_toRightOf="@+id/tv_item_refresh_record_month"
+        android:text="日" />
+
     <HorizontalScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/line"
+        android:layout_marginLeft="@dimen/distance_10"
+        android:layout_toRightOf="@+id/tv_item_refresh_record_date">
+
         <LinearLayout
             android:id="@+id/ll_item_refresh_record"
-            android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
         </LinearLayout>
     </HorizontalScrollView>
 
-</LinearLayout>
+</RelativeLayout>
