--- a/app/src/main/res/layout/activity_write_address.xml
+++ b/app/src/main/res/layout/activity_write_address.xml
@@ -52,7 +52,8 @@
             android:layout_width="match_parent"
             android:layout_height="30dp"
             android:gravity="center"
-            android:text="收货信息" />
+            android:text="收货信息"
+            android:textSize="@dimen/text_size_17" />
 
         <TextView
             android:layout_width="match_parent"
