--- a/app/src/main/res/layout/activity_write_order.xml
+++ b/app/src/main/res/layout/activity_write_order.xml
@@ -8,27 +8,11 @@
     android:fitsSystemWindows="true"
     tools:context="com.example.huichuanyi.ui_third.Write_OrderActivity">
 
-    <RelativeLayout
-        android:id="@+id/rl_write_order_title"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:background="@color/text_color">
-
-        <include layout="@layout/btn_back"></include>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:text="填写订单"
-            android:textColor="@color/main_color_write"
-            android:textSize="@dimen/text_size_18" />
-    </RelativeLayout>
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/rl_write_order_bottom"
+        android:layout_alignParentStart="true"
         android:layout_below="@+id/rl_write_order_title">
 
         <LinearLayout
@@ -47,8 +31,10 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="30dp"
+                    android:layout_margin="@dimen/distance_5"
                     android:gravity="center"
-                    android:text="收货信息" />
+                    android:text="收货信息"
+                    android:textSize="@dimen/text_size_17" />
 
                 <TextView
                     android:layout_width="match_parent"
@@ -100,8 +86,10 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="30dp"
+                    android:layout_margin="@dimen/distance_5"
                     android:gravity="center"
-                    android:text="服饰信息" />
+                    android:text="服饰信息"
+                    android:textSize="@dimen/text_size_17" />
 
                 <TextView
                     android:layout_width="match_parent"
@@ -147,8 +135,10 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="30dp"
+                    android:layout_margin="@dimen/distance_5"
                     android:gravity="center"
-                    android:text="收货信息" />
+                    android:text="物流信息"
+                    android:textSize="@dimen/text_size_17" />
 
                 <TextView
                     android:layout_width="match_parent"
@@ -169,9 +159,14 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:layout_marginLeft="@dimen/distance_5"
+                        android:layout_marginRight="@dimen/distance_20"
                         android:layout_marginTop="@dimen/distance_10"
                         android:layout_toRightOf="@+id/tv_write_order_who_send"
-                        android:text="由慧美发货" />
+                        android:text="慧美科技签约厂家直接发货，保证服饰质量，而且不收邮费~"
+                        android:textSize="@dimen/text_size_16" />
+
                 </RelativeLayout>
 
 
@@ -182,19 +177,38 @@
     </ScrollView>
 
     <RelativeLayout
+        android:id="@+id/rl_write_order_title"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:background="@color/text_color">
+
+        <include layout="@layout/btn_back"></include>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:text="填写订单"
+            android:textColor="@color/main_color_write"
+            android:textSize="@dimen/text_size_18" />
+    </RelativeLayout>
+
+    <LinearLayout
         android:id="@+id/rl_write_order_bottom"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:layout_alignParentBottom="true"
         android:layout_margin="@dimen/distance_10"
         android:background="@drawable/background"
-        android:padding="@dimen/distance_10">
+        android:orientation="horizontal">
 
         <TextView
             android:id="@+id/tv_write_order_price"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
+            android:layout_marginLeft="@dimen/distance_10"
+            android:layout_weight="1"
             android:text="总计：¥598" />
 
         <Button
@@ -202,9 +216,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
+            android:layout_weight="1"
             android:background="@drawable/btn_select"
             android:text="提交订单"
             android:textColor="@color/main_color_write" />
-    </RelativeLayout>
+    </LinearLayout>
 
 </RelativeLayout>
