--- a/app/src/main/res/layout/fragment_365.xml
+++ b/app/src/main/res/layout/fragment_365.xml
@@ -37,8 +37,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/tv_365_top"
         android:orientation="vertical"
-        android:padding="@dimen/distance_10"
-        android:visibility="gone">
+        android:padding="@dimen/distance_10">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -68,6 +67,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/distance_10"
+            android:background="@drawable/background"
             android:orientation="vertical">
 
             <TextView
@@ -75,7 +75,8 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:padding="@dimen/distance_10"
-                android:text="365特权" />
+                android:text="365特权"
+                android:textSize="@dimen/text_size_17" />
 
             <TextView
                 android:layout_width="match_parent"
@@ -139,7 +140,8 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:padding="@dimen/distance_10"
-                android:text="365功能须知" />
+                android:text="365功能须知"
+                android:textSize="@dimen/text_size_17" />
 
             <TextView
                 android:layout_width="match_parent"
