--- a/app/src/main/res/layout/activity_forget_pwdacitity.xml
+++ b/app/src/main/res/layout/activity_forget_pwdacitity.xml
@@ -1,97 +1,101 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     android:orientation="vertical"
     tools:context="com.example.huichuanyi.secondui.ForgetPWDAcitity">
+
     <RelativeLayout
         android:id="@+id/tl_bound_mTool"
-        android:background="@color/top_color"
-        android:layout_width="match_parent"
-        android:layout_height="40dp">
-        <ImageView
-            android:id="@+id/iv_fogetPwd_back"
-            android:src="@drawable/back"
-            android:layout_height="match_parent"
-            android:layout_width="40dp"
-            />
-        <TextView
-            android:text="忘记密码"
-            android:textColor="#fff"
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            android:layout_centerInParent="true"
-            android:textSize="@dimen/text_size_big"
-            />
-    </RelativeLayout>
-    <LinearLayout
-        android:orientation="vertical"
-        android:layout_centerInParent="true"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/distance"
-        android:layout_marginRight="@dimen/distance"
-        >
-    <EditText
-        android:id="@+id/et_forget_pwd_writephone"
-        android:background="@drawable/background"
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:hint="输入手机号"
-        android:phoneNumber="true"
-        android:textSize="14sp"
-        android:gravity="center"
-        />
-        <LinearLayout
-            android:orientation="horizontal"
+        android:background="@color/top_color">
+
+        <ImageView
+            android:id="@+id/iv_fogetPwd_back"
+            android:layout_width="40dp"
+            android:layout_height="match_parent"
+            android:src="@drawable/back" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:text="忘记密码"
+            android:textColor="#fff"
+            android:textSize="@dimen/text_size_big" />
+    </RelativeLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:layout_marginLeft="@dimen/distance"
+        android:layout_marginRight="@dimen/distance"
+        android:orientation="vertical">
+
+        <EditText
+            android:id="@+id/et_forget_pwd_writephone"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="40dp"
+            android:background="@drawable/background"
+            android:gravity="center"
+            android:hint="输入手机号"
+            android:phoneNumber="true"
+            android:textSize="14sp" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
             <EditText
                 android:id="@+id/et_forget_pwd_auth_code"
-                android:background="@drawable/background"
                 android:layout_width="0dp"
-                android:layout_weight="1"
                 android:layout_height="40dp"
-                android:hint="输入验证码"
-                android:textSize="14sp"
-                android:gravity="center"
                 android:layout_marginTop="@dimen/distance"
-                />
-            <Button
-                android:layout_marginLeft="@dimen/distance"
-                android:id="@+id/btn_forget_pwd_getAuth"
-                android:text="获取验证码"
-                android:layout_marginTop="@dimen/distance"
-                android:textColor="@color/text_color"
                 android:layout_weight="1"
                 android:background="@drawable/background"
+                android:gravity="center"
+                android:hint="输入验证码"
+                android:textSize="14sp" />
+
+            <Button
+                android:id="@+id/btn_forget_pwd_getAuth"
                 android:layout_width="0dp"
-                android:layout_height="40dp"/>
+                android:layout_height="40dp"
+                android:layout_marginLeft="@dimen/distance"
+                android:layout_marginTop="@dimen/distance"
+                android:layout_weight="1"
+                android:background="@drawable/red_4dp"
+                android:text="获取验证码"
+                android:textColor="@color/main_color_write"
+                android:textSize="@dimen/text_size_15" />
         </LinearLayout>
 
         <EditText
             android:id="@+id/et_forget_pwd_pwd"
-            android:background="@drawable/background"
             android:layout_width="match_parent"
             android:layout_height="40dp"
-            android:hint="输入密码"
-            android:textSize="14sp"
-            android:gravity="center"
+            android:layout_marginTop="@dimen/distance"
+            android:background="@drawable/background"
             android:digits="0123456789abcdefghigklmnopqrstuvwxyz
             ABCDEFGHIJKLMNOPQRSTUVWXYZ_+=.!#*"
-            android:layout_marginTop="@dimen/distance"
-            />
-    <Button
-        android:id="@+id/btn_forget_pwd_sure"
-        android:text="确认"
-        android:layout_marginTop="@dimen/distance"
-        android:textColor="@color/text_color"
-        android:background="@drawable/background"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"/>
+            android:gravity="center"
+            android:hint="输入密码"
+            android:textSize="14sp" />
 
-</LinearLayout>
+        <Button
+            android:id="@+id/btn_forget_pwd_sure"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_marginTop="@dimen/distance"
+            android:background="@drawable/red_4dp"
+            android:text="确认"
+            android:textColor="@color/main_color_write"
+            android:textSize="@dimen/text_size_15" />
+
+    </LinearLayout>
 </RelativeLayout>
