--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,82 +1,73 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context=".secondui.AuthCodeActivity">
+    tools:context="com.example.huichuanyi.secondui.LoginActivity">
 
     <RelativeLayout
-        android:background="@color/top_color"
+        android:id="@+id/tl_bound_mTool"
         android:layout_width="match_parent"
-        android:layout_height="40dp">
-        <ImageView
-            android:id="@+id/iv_authcode_back"
-            android:src="@drawable/back"
-            android:layout_height="match_parent"
-            android:layout_width="40dp"
-            />
+        android:layout_height="40dp"
+        android:background="@color/top_color">
+
+        <include layout="@layout/btn_back"></include>
+
         <TextView
-            android:text="输入验证码"
-            android:textColor="#fff"
-            android:layout_height="wrap_content"
             android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:textSize="@dimen/text_size_big"
-            />
+            android:text="登录"
+            android:textColor="#fff"
+            android:textSize="@dimen/text_size_big" />
     </RelativeLayout>
+
     <LinearLayout
-        android:orientation="vertical"
-        android:layout_centerInParent="true"
-        android:layout_height="wrap_content"
         android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
         android:layout_marginLeft="@dimen/distance"
         android:layout_marginRight="@dimen/distance"
-        >
-        <EditText
-            android:id="@+id/et_authcode_auth"
-            android:hint="输入验证码"
-            android:gravity="center"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:background="@drawable/background"
-            />
-        <EditText
-            android:id="@+id/et_authcode_pwd"
-            android:hint="输入密码"
-            android:gravity="center"
-            android:layout_marginTop="@dimen/distance"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:background="@drawable/background"
-            android:digits="0123456789abcdefghigklmnopqrstuvwxyz
-            ABCDEFGHIJKLMNOPQRSTUVWXYZ_+=.!#*"
-            />
-        <Button
-            android:id="@+id/btn_authcode_register"
-            android:text="注册"
-            android:background="@drawable/background"
-            android:layout_marginTop="@dimen/distance"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"/>
-        <LinearLayout
-            android:layout_marginTop="@dimen/distance"
-            android:layout_gravity="center"
-            android:orientation="horizontal"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-            <TextView
-                android:id="@+id/tv_auth_code_time"
-                android:text="60"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
-            <TextView
-                android:text="秒重新发送"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
-        </LinearLayout>
+        android:orientation="vertical">
 
+        <EditText
+            android:id="@+id/et_login_writephone"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:background="@drawable/background"
+            android:gravity="center"
+            android:hint="输入手机号"
+            android:phoneNumber="true"
+            android:textSize="14sp" />
+
+        <EditText
+            android:id="@+id/et_login_pwd"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_marginTop="@dimen/distance_20"
+            android:background="@drawable/background"
+            android:gravity="center"
+            android:hint="输入密码"
+            android:textSize="14sp" />
+
+        <Button
+            android:id="@+id/btn_login_login"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_marginTop="@dimen/distance_20"
+            android:background="@drawable/red_4dp"
+            android:text="登 录"
+            android:textColor="@color/main_color_write" />
+
+        <TextView
+            android:id="@+id/tv_login_forgetpwd"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:layout_marginTop="@dimen/distance_15"
+            android:padding="@dimen/distance_5"
+            android:text="忘记密码" />
     </LinearLayout>
 
 </RelativeLayout>
