--- a/app/src/main/res/layout/activity_order.xml
+++ b/app/src/main/res/layout/activity_order.xml
@@ -31,16 +31,17 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:layout_margin="@dimen/distance"
-        android:background="@drawable/background">
+        android:layout_margin="@dimen/distance">
 
         <android.support.design.widget.TabLayout
             android:id="@+id/tb_order_mTitle"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:tabBackground="@drawable/tab_select"
+            app:tabBackground="@drawable/tab_background"
             app:tabIndicatorHeight="0dp"
-            app:tabSelectedTextColor="@color/text_color"></android.support.design.widget.TabLayout>
+            app:tabSelectedTextColor="@color/main_color_write">
+
+        </android.support.design.widget.TabLayout>
     </RelativeLayout>
 
     <android.support.v4.view.ViewPager
