--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,109 +8,112 @@
 
     <RelativeLayout
         android:id="@+id/tl_register_mTool"
-        android:background="@color/top_color"
         android:layout_width="match_parent"
-        android:layout_height="40dp">
-        <ImageView
-            android:id="@+id/iv_register_back"
-            android:src="@drawable/back"
-            android:layout_height="match_parent"
-            android:layout_width="40dp"
-            />
+        android:layout_height="40dp"
+        android:background="@color/top_color">
+
+        <include layout="@layout/btn_back"></include>
+
         <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
             android:text="注册"
             android:textColor="#fff"
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            android:layout_centerInParent="true"
-            android:textSize="@dimen/text_size_big"
-            />
-    </RelativeLayout>
-    <LinearLayout
-        android:orientation="vertical"
-        android:layout_centerInParent="true"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/distance"
-        android:layout_marginRight="@dimen/distance"
-        >
-        <EditText
-            android:id="@+id/et_register_writephone"
-            android:background="@drawable/background"
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:hint="输入手机号"
-            android:phoneNumber="true"
-            android:textSize="14sp"
-            android:gravity="center"
+            android:textSize="@dimen/text_size_big" />
 
-            />
-        <Button
-            android:id="@+id/bt_register_getsms"
-            android:background="@drawable/background"
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:text="获取验证码"
-            android:textSize="14sp"
-            android:textColor="@color/text_color"
-            android:layout_marginTop="@dimen/distance">
-        </Button>
         <TextView
             android:id="@+id/tv_register_yetlogin"
-            android:text="登录已有账号"
-            android:gravity="center"
-            android:layout_marginTop="20dp"
             android:layout_width="wrap_content"
-            android:layout_gravity="center"
-            android:textSize="14sp"
-            android:layout_height="wrap_content"/>
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            >
-            <TextView
-                android:layout_weight="3"
-                android:background="#c1bfbf"
-                android:layout_width="0dp"
-                android:layout_height="1dp"
-                android:layout_gravity="center_vertical"
-                />
-            <TextView
-                android:gravity="center"
-                android:text="第三方登录"
-                android:layout_weight="2"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                />
-            <TextView
-                android:layout_weight="3"
-                android:background="#c1bfbf"
-                android:layout_width="0dp"
-                android:layout_height="1dp"
-                android:layout_gravity="center_vertical"
-                />
-        </LinearLayout>
-        <LinearLayout
-            android:layout_marginTop="@dimen/distance"
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
             android:gravity="center"
-            >
+            android:paddingLeft="@dimen/distance_5"
+            android:paddingRight="@dimen/distance_5"
+            android:text="已有账号"
+            android:textColor="@color/main_color_write"
+            android:textSize="@dimen/text_size_15" />
+    </RelativeLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:layout_marginLeft="@dimen/distance"
+        android:layout_marginRight="@dimen/distance"
+        android:orientation="vertical">
+
+        <EditText
+            android:id="@+id/et_register_writephone"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:background="@drawable/background"
+            android:gravity="center"
+            android:hint="输入手机号"
+            android:phoneNumber="true"
+            android:textSize="@dimen/text_size_15" />
+
+        <Button
+            android:id="@+id/bt_register_getsms"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_marginTop="@dimen/distance_20"
+            android:background="@drawable/red_4dp"
+            android:text="获取验证码"
+            android:textColor="@color/main_color_write"
+            android:textSize="@dimen/text_size_15"></Button>
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/distance_35"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="1dp"
+                android:layout_gravity="center_vertical"
+                android:layout_weight="1"
+                android:background="#c1bfbf" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/distance_10"
+                android:layout_marginRight="@dimen/distance_10"
+                android:gravity="center"
+                android:text="or" />
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="1dp"
+                android:layout_gravity="center_vertical"
+                android:layout_weight="1"
+                android:background="#c1bfbf" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/distance"
+            android:gravity="center"
+            android:orientation="horizontal">
+
             <ImageView
                 android:id="@+id/iv_register_wechat"
-                android:src="@mipmap/wechat"
-                android:layout_marginRight="@dimen/distance"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:layout_marginRight="@dimen/distance"
+                android:src="@mipmap/wechat" />
+
             <ImageView
                 android:id="@+id/iv_register_qq"
-                android:src="@mipmap/qq"
-                android:layout_marginLeft="@dimen/distance"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/distance"
+                android:src="@mipmap/qq" />
         </LinearLayout>
     </LinearLayout>
 
