--- a/app/src/main/res/layout/activity_write_order.xml
+++ b/app/src/main/res/layout/activity_write_order.xml
@@ -66,12 +66,12 @@
                         android:layout_below="@+id/tv_write_order_name"
                         android:layout_marginTop="@dimen/distance_10" />
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                    <ImageView
+                        android:src="@mipmap/edit"
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
                         android:layout_alignParentEnd="true"
-                        android:layout_centerVertical="true"
-                        android:text=">" />
+                        android:layout_centerVertical="true"/>
                 </RelativeLayout>
 
             </LinearLayout>
