--- a/app/src/main/res/layout/fragment_first_order.xml
+++ b/app/src/main/res/layout/fragment_first_order.xml
@@ -133,7 +133,7 @@
             <Button
                 android:id="@+id/btn_fragment_first_order"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="40dp"
                 android:layout_marginBottom="@dimen/distance"
                 android:layout_marginLeft="@dimen/distance"
                 android:layout_marginRight="@dimen/distance"
