--- a/app/src/main/res/layout/item_clothes_info.xml
+++ b/app/src/main/res/layout/item_clothes_info.xml
@@ -12,8 +12,8 @@
         android:layout_height="0dp"
         android:layout_weight="4"
         fresco:actualImageScaleType="fitCenter"
-        fresco:placeholderImageScaleType="fitXY"
         fresco:placeholderImage="@mipmap/nonepic"
+        fresco:placeholderImageScaleType="fitXY"
         fresco:roundBottomLeft="false"
         fresco:roundBottomRight="false"
         fresco:roundedCornerRadius="5dp" />
@@ -49,11 +49,11 @@
             android:layout_marginTop="@dimen/distance_10"
             android:text="介绍" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+        <ImageView
+            android:layout_width="20dp"
+            android:layout_height="20dp"
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
-            android:text=">" />
+            android:src="@mipmap/edit" />
     </RelativeLayout>
 </LinearLayout>
