--- a/app/src/main/res/layout/item_label.xml
+++ b/app/src/main/res/layout/item_label.xml
@@ -1,102 +1,113 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:background="@color/write"
-    android:layout_height="match_parent">
+    android:orientation="vertical">
+
     <ImageView
         android:id="@+id/iv_item_label_delete"
-        android:src="@mipmap/delete"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:src="@mipmap/delete" />
+
     <TextView
-        android:padding="@dimen/distance"
-        android:textColor="@color/text_color"
         android:id="@+id/tv_item_label_more"
-        android:text="更多"
-        android:layout_alignParentEnd="true"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:padding="@dimen/distance"
+        android:text="更多"
+        android:textColor="@color/text_color" />
+
     <RelativeLayout
-        android:layout_below="@+id/tv_item_label_more"
-        android:padding="@dimen/distance_20"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_below="@+id/tv_item_label_more"
+        android:padding="@dimen/distance_20">
+
         <RelativeLayout
-            android:layout_marginTop="@dimen/distance_5"
             android:id="@+id/rv_item_label_delete"
             android:layout_width="120dp"
-            android:layout_height="160dp">
+            android:layout_height="160dp"
+            android:layout_marginTop="@dimen/distance_5">
+
             <com.example.huichuanyi.custom.RoundImageView
                 android:id="@+id/rv_item_up_clothes"
-                android:scaleType="fitXY"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="match_parent"
+                android:scaleType="fitXY" />
         </RelativeLayout>
+
         <RelativeLayout
-            android:layout_marginLeft="@dimen/distance"
-            android:layout_toRightOf="@+id/rv_item_label_delete"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:layout_marginLeft="@dimen/distance"
+            android:layout_toRightOf="@+id/rv_item_label_delete">
+
             <TextView
                 android:id="@+id/tv_item_label_season"
-                android:text="*季节"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:text="*场合" />
+
             <HorizontalScrollView
-                android:scrollbars="none"
                 android:id="@+id/hs_item_label_season"
-                android:layout_below="@+id/tv_item_label_season"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/tv_item_label_season"
+                android:scrollbars="none">
+
                 <RadioGroup
-                    android:orientation="horizontal"
                     android:id="@+id/rg_item_label_occ"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-                </RadioGroup>
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"></RadioGroup>
             </HorizontalScrollView>
+
             <TextView
                 android:id="@+id/tv_item_label_sort"
-                android:layout_below="@+id/hs_item_label_season"
-                android:text="*款式"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/hs_item_label_season"
+                android:text="*款式" />
+
             <HorizontalScrollView
-                android:scrollbars="none"
                 android:id="@+id/hs_item_label_sort"
-                android:layout_below="@+id/tv_item_label_sort"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/tv_item_label_sort"
+                android:scrollbars="none">
+
                 <RadioGroup
-                    android:orientation="horizontal"
                     android:id="@+id/rg_item_label_sort"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-                </RadioGroup>
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"></RadioGroup>
             </HorizontalScrollView>
+
             <TextView
                 android:id="@+id/tv_item_label_style"
-                android:layout_below="@+id/hs_item_label_sort"
-                android:text="*类型"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/hs_item_label_sort"
+                android:text="*类型" />
+
             <HorizontalScrollView
-                android:layout_below="@+id/tv_item_label_style"
-                android:scrollbars="none"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/tv_item_label_style"
+                android:scrollbars="none">
+
                 <RadioGroup
-                    android:orientation="horizontal"
                     android:id="@+id/rg_item_label_style"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-                </RadioGroup>
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"></RadioGroup>
             </HorizontalScrollView>
         </RelativeLayout>
 
     </RelativeLayout>
-
 
 
 </RelativeLayout>
